@@ -205,6 +205,12 @@ namespace triagens {
         fuseCalculationsRule_pass9                    = 901,
 
 //////////////////////////////////////////////////////////////////////////////
+/// Pass 9: patch update statements
+//////////////////////////////////////////////////////////////////////////////
+        
+        patchUpdateStatementsRule_pass9               = 902,
+
+//////////////////////////////////////////////////////////////////////////////
 /// "Pass 10": final transformations for the cluster
 //////////////////////////////////////////////////////////////////////////////
 
